inscripion gestion js 90 %

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -80,6 +80,6 @@ footer{
    width: 50%;
    height: 25px;
 }
-#erreurLogin{
+#erreurLogin,#erreurEmail,#erreurPassword,#erreurVpass{
     color: red;
 }
