--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -62,13 +62,13 @@ footer{
     width: 100%;
     background-color: #2a475e;
 }
-/* ---------------------------------------------------------------formulaire inscription et connexion------------------------------------------- */
-#inscription,#connexion{
+/* ---------------------------------------------------------------formulaire inscription et connexion profil------------------------------------------- */
+#inscription,#connexion,#profil{
     display: flex;
     justify-content: center;
     margin-top: 10%;
 }
-#formInscription,#formConnexion{
+#formInscription,#formConnexion,#formProfil{
     background-color:#2a475e ;
     display: flex;
     flex-direction: column;
@@ -93,6 +93,7 @@ footer{
 .formchat #sendChat{
     width: 87.5%;
 }
+
 /* ---------------------------------------------------------- CHAT----------------------------------------------------------------- */
 #mainChat{
     height: 100vh;
@@ -123,4 +124,81 @@ footer{
 p{
     margin-top: 1%;
     color: black;
+}
+
+/* -----------------------------------------------------MODAL PROFIL---------------------------------------------------- */
+.modal {
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    height: 20vh;
+    width: 50%; /* Could be more or less, depending on screen size */
+  }
+  .modal-content h2{
+    text-align: center;
+  }
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #updatepassword{
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  #updatepassword input{
+      margin-top: 2%;
+  }
+  table,
+td {
+    border: 1px solid white;
+}
+th{
+    color: black;
+}
+td{
+    color: white;
+}
+thead,
+tfoot {
+    background-color: white;
+    color: #fff;
+}
+#creerCanal{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3%;
+}
+#tableauAdmin{
+    display: flex;
+    flex-direction: column;
+    margin-right: 3%;
+}
+#tableauAdmin table{
+    margin: 5%;
 }
